ng-petclinic/templates/petclinic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vet-clinic-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: DearingClinic
  template:
    metadata:
      labels:
        app: DearingClinic
    spec:
      containers:
        - name: dearingvetclinic-container
          image: cmakkaya/veterinary-clinic:DearingVetClinic 
          ports:
            - containerPort: 8080
