ng-petclinic/templates/petclinic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vet-clinic-service
spec:
  selector:
    app: DearingClinic
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
